Simplify GPU runtime setup and complete callback retirement after failures